[tool.poetry]
name = "diveharder"
version = "0.1.0"
description = ""
authors = ["AJXD2 <anthonyjohnkovach@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
diveharder = "diveharder.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
fire = "^0.6.0"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
