[tool.poetry]
name = "diveharder"
version = "0.1.2"
description = "A Helldivers 2 API wrapper using the Diveharder API and the Helldivers Community API"
authors = ["AJXD2 <aj@ajxd2.dev>"]
license = "MIT"
readme = "README.md"
keywords = ["helldivers 2","api","wrapper","diveharder","community"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Networking",
    "Typing :: Typed",
    
]
homepage = "https://github.com/ajxd2/diveharder-wrapper"


[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
fire = "^0.7.0"
rich = "^13.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
